# mullu-control-plane

./: .env.example  .gitignore  AGENTS.md  CODEX_PUBLIC_NARRATIVE_NOTICE.md  CONSTRAINT_MATRIX.md  CURRENT_PLATFORM_STATE.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile  GITHUB_SURFACE.md  HANDOFF_PLAN.md  KNOWN_LIMITATIONS_v0.1.md  LICENSE  MULLUSI_AGENTIC_SERVICE_HARNESS_LIVE_TASK_RUN_PRODUCER_EVIDENCE.md  MULLUSI_AGENTIC_SERVICE_HARNESS_READINESS_MAP.md  MULLUSI_AGENTIC_SERVICE_HARNESS_READ_MODEL_BINDING_PLAN.md  MULLUSI_AGENTIC_SERVICE_HARNESS_READ_ONLY_STATUS_ROUTE_DESIGN.md  NOTICE  OPERATOR_GUIDE_v0.1.md  PILOT_CHECKLIST_v0.1.md  PILOT_OPERATIONS_GUIDE_v0.1.md  PILOT_WORKFLOWS_v0.1.md  PROMOTION_CHECKLIST.md  README.md  RELEASE_CHECKLIST_v0.1.md  RELEASE_NOTES_v0.1.md  RELEASE_NOTES_v3.13.1.md  RELEASE_NOTES_v4.0.0.md  RELEASE_NOTES_v4.1.0.md  RELEASE_NOTES_v4.10.0.md  RELEASE_NOTES_v4.11.0.md  RELEASE_NOTES_v4.12.0.md  RELEASE_NOTES_v4.13.0.md  RELEASE_NOTES_v4.14.0.md  RELEASE_NOTES_v4.14.1.md  RELEASE_NOTES_v4.15.0.md  RELEASE_NOTES_v4.16.0.md  RELEASE_NOTES_v4.17.0.md  RELEASE_NOTES_v4.18.0.md  RELEASE_NOTES_v4.19.0.md  (+44 more)
mcoi/: README.md  pyproject.toml
mcoi/capability_closure/: __init__.py  runner.py
mcoi/capability_levels/: __init__.py  ladder.py
mcoi/causal_repair/: __init__.py  service.py
mcoi/examples/: config-local-dev.json  config-safe-readonly.json  request-echo.json  request-with-bindings.json
mcoi/govern/safe_local_action_rehearsal/: __init__.py  runner.py
mcoi/mcoi_runtime/: __init__.py  truth_kernel_adapter.py  truth_kernel_finite_domain.py
mcoi/scripts/: stress_test_governance.py
mcoi/swarm/: __init__.py
mcoi/tests/: conftest.py  test_ab_testing.py  test_accepted_risk.py  test_access_runtime_contracts.py  test_access_runtime_engine.py  test_access_runtime_integration.py  test_adapter_golden.py  test_adapter_governance.py  test_adapter_integration.py  test_admin_endpoints_authorization.py  test_adversarial_operations.py  test_adversarial_runtime_contracts.py  test_adversarial_runtime_engine.py  test_adversarial_runtime_integration.py  test_agent_adapter_lifecycle.py  test_agent_adapter_protocol.py  test_agent_chain.py  test_agent_chain_execution_lifecycle.py  test_agent_memory.py  test_agent_memory_tenant_scope.py  test_agent_orchestration.py  test_agent_orchestration_concurrency.py  test_agent_protocol.py  test_agent_workflow.py  test_agentic_capabilities.py  test_anthropic_streaming.py  test_api_key_auth.py  test_api_key_lifecycle.py  test_api_migration.py  test_api_version.py  test_app_builder_product_spec.py  test_approval.py  test_approval_review_actor_binding.py  test_artifact_ingestion_contracts.py  test_artifact_ingestion_engine.py  test_artifact_ingestion_golden.py  test_artifact_ingestion_integration.py  test_artifact_lineage_dag.py  test_artifact_parser_contracts.py  test_artifact_parsers.py  (+1058 more)
mcoi/tools/: audit_constraint_matrix.py  export_adapter_snapshots.py  export_request_schemas.py
(+5961 files in other folders)
