[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mcoi-runtime"
version = "3.8.0"
description = "MCOI Runtime — Governed AI Operating System for the Mullu Platform."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mcoi = "mcoi_runtime.app.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "fastapi>=0.115", "httpx>=0.27", "uvicorn>=0.34"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]
markers = ["soak: long-running soak/longevity tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcoi_runtime*"]
