[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mcoi-runtime"
version = "3.11.0"
description = "MCOI Runtime — Governed AI Operating System for the Mullu Platform."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mcoi = "mcoi_runtime.app.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "fastapi>=0.115", "httpx>=0.27", "uvicorn>=0.34"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]
markers = [
    "soak: long-running soak/longevity tests",
    "live_provider: requires real API keys (ANTHROPIC_API_KEY or OPENAI_API_KEY)",
    "infra_pg: requires real PostgreSQL (docker run postgres:16-alpine)",
    "infra_smtp: requires MailHog SMTP (docker run mailhog/mailhog)",
]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcoi_runtime*"]
